@@ -65,7 +65,7 @@
     <dependency>
       <groupId>io.projectreactor</groupId>
       <artifactId>reactor-test</artifactId>
-      <version>3.3.0.RELEASE</version> <!-- {x-version-update;io.projectreactor:reactor-test;external_dependency} -->
+      <version>3.3.3.RELEASE</version> <!-- {x-version-update;io.projectreactor:reactor-test;external_dependency} -->
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -218,6 +218,7 @@
                 --add-opens com.azure.storage.common/com.azure.storage.common.implementation=ALL-UNNAMED
                 --add-opens com.azure.storage.queue/com.azure.storage.queue=ALL-UNNAMED
                 --add-opens com.azure.storage.queue/com.azure.storage.queue.implementation=ALL-UNNAMED
+                --add-opens com.azure.storage.queue/com.azure.storage.queue.implementation.util=ALL-UNNAMED
                 --add-opens com.azure.storage.queue/com.azure.storage.queue.models=ALL-UNNAMED
                 --add-reads com.azure.core=ALL-UNNAMED
                 --add-reads com.azure.core.test=ALL-UNNAMED
